@@ -1,5 +1,10 @@
 Changes with APR-util b1  
 
+  *) Fixed a segfault in apr_date_parse_rfc() for some date formats
+     where it was trying to overlay a potentially static input
+     string even though it didn't really need to.
+     [Cliff Woolley, Doug MacEachern]
+
   *) Ensure that apu-config does not print libtool libraries when
      using --libs.  [Justin Erenkrantz]
 
